fix margin left on mobile in pagination button

--- a/src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
+++ b/src/features/Reviews/ui/ReviewsFormMovie/CommentList/style.module.scss
@@ -46,7 +46,7 @@
 			display: none;
 		}
 		&__pagination-button {
-			height: max-content;
+			margin-left: 0px;
 			padding-block: 0px;
 		}
 		&__close-button {
